<resources>
    <string name="app_name">BeansJar</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BeansJar</string>
    <string name="nav_header_desc">BeansJar</string>
    <string name="nav_item_heading">Menu</string>
    <string name="nav_item_reminder_configure">Configure reminder</string>
    <string name="nav_item_reminder_stop">Stop reminder</string>
    <string name="nav_item_backup_database">Backup database</string>
    <string name="nav_item_import_backup">Import backup</string>

    <!-- Reminder -->
    <string name="reminder_notification_channel_name">Beans reminder</string>
    <string name="reminder_notification_channel_desc">Reminder notifications.</string>
    <string name="reminder_notification_title">Don\'t forget!</string>
    <string name="reminder_notification_desc">What\'s today\'s bean?</string>
    <string name="reminder_notification_set">Daily timer: %1$s</string>
    <string name="reminder_notification_canceled">Timer canceled</string>

    <!-- Backup -->
    <string name="backup_result_success">Backup was successful. File is saved in downloads folder.</string>
    <string name="backup_result_failure">Backup failed!</string>

    <!-- Create beans fragment -->
    <string name="beans_create_fragment_event_placeholder">Create</string>
    <string name="beans_create_fragment_create_btn">Create</string>
    <string name="beans_create_fragment_cancel_btn">Cancel</string>
    <string name="beans_create_fragment_toast_data_missing">Data missing!</string>
    <string name="beans_create_fragment_image_name_placeholder">No image selected</string>
    <string name="beans_create_fragment_image_select_button">Image</string>
    <string name="beans_create_fragment_exif_copy_fail">Exception while trying to copy EXIF attributes!</string>

    <!-- Delete beans confirm dialog -->
    <string name="beans_delete_confirm_dialog_text">You\'re about to delete \'%s\' from %s.\nAre you sure?</string>
    <string name="beans_delete_confirm_dialog_delete_btn">Delete</string>
    <string name="beans_delete_confirm_dialog_cancel_btn">Cancel</string>

</resources>
